fixed : admin notice style on mobile. fixes https://github.com/presscustomizr/nimble-builder/issues/487

--- a/assets/back/css/tc_admin.css
+++ b/assets/back/css/tc_admin.css
@@ -377,3 +377,17 @@ span.czr-rec-button a {
   margin: 0 0 5px;
   line-height: 1.6em;
 }
+
+@media screen and (max-width: 782px) {
+    .czr-rec-text-block {width: 100%;}
+    .notice.czr-nimble-rec-notice p { text-align: center;}
+    .czr-nimble-rec-notice .czr-nimble-rec-notice-icon{top:auto }
+    .notice.czr-nimble-rec-notice h3 {margin: 0 0 16px;text-align: center;}
+    .czr-rec-button{
+      text-align: center;
+      width: 100%;
+      display: block;
+      margin-top: 10px;
+    }
+    .czr-nimble-rec-notice .czr-tgmpa-img-block{ display: none;}
+}
